# autologic

./: .gitattributes  .gitignore  CHANGELOG.md  IMPROVEMENTS_SUMMARY.md  README.md  autologic-export.csv  modified-event.csv  modified-event.pkl  pyproject.toml  readme.md  requirements-dev.in  requirements-minimal.txt  requirements.in  requirements.txt
.github/workflows/: pipeline.yml  release.yml
autologic/: README.md  __init__.py  app.py  category.py  cli.py  config.py  event.py  gui.py  heat.py  hook-algorithms.py  participant.py  pdf.py  stations.py  utils.py
autologic/algorithms/: __init__.py  _base.py  _registry.py  example.py  randomize.py
gui/: gui.py  gui_dev_manual.md  gui_developer_manual.md
scripts/: attribute_merger.py  msr_export_attribute_differ.py  msr_export_attribute_mapper.py  script_utils.py
source/: Category.py  Event.py  Group.py  Heat.py  Participant.py  autologic.py  cli.py  compare_heats.py  constants.py  gui.py  hook-algorithms.py  main.py  pdf_report.py  relaxed_solver.py  role_optimizer.py  simple_solver.py  timing_flexibility.py  utils.py
source/algorithms/: __init__.py  _base.py  _registry.py  example.py  randomize.py
tests/: README.md  sample.csv  sample.csv.heats.txt  sample.csv.heats_by_class.txt  sample.csv.workers.txt  sample_3heats.heats.txt  sample_3heats.heats_by_class.txt  sample_3heats.workers.txt  sample_axware_export.csv  sample_axware_export.tsv  sample_event_config.yaml  sample_member_attributes.csv  sample_msr_export.csv  test_autologic.py  test_integration.py  test_integration_main.py  test_stations.py
